# nl2sql

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
src/pg_nl2sql/: __init__.py  cli.py  config.py
src/pg_nl2sql/db/: __init__.py  connection.py  introspect.py  queries.py
src/pg_nl2sql/llm/: __init__.py  base.py  openai_adapter.py
src/pg_nl2sql/models/: __init__.py  generation.py
src/pg_nl2sql/prompts/: __init__.py  sql_generation.py
src/pg_nl2sql/schema/: __init__.py  cache.py  retrieval.py
src/pg_nl2sql/sql/: __init__.py  parser.py  rules.py  validator.py
